crates/kea-infer/tests/snapshots/diagnostic_snapshots__e0001_type_mismatch.snap
---
source: crates/kea-infer/tests/diagnostic_snapshots.rs
expression: format_diagnostics(&diags)
---
error[E0001]: return type mismatch: expected `Int`, got `String`
