crates/kea-infer/tests/snapshots/diagnostic_snapshots__e0002_missing_field.snap
---
source: crates/kea-infer/tests/diagnostic_snapshots.rs
expression: format_diagnostics(&diags)
---
error[E0002]: the record is missing field `age`
  help: expected fields: `name`
