crates/kea-infer/tests/snapshots/diagnostic_snapshots__e0011_extra_field.snap
---
source: crates/kea-infer/tests/diagnostic_snapshots.rs
expression: format_diagnostics(&diags)
---
error[E0011]: the record has unexpected field `temp`
  help: expected fields: `name`
