crates/kea-infer/tests/snapshots/diagnostic_snapshots__e0013_record_row_mismatch_fn_arg.snap
---
source: crates/kea-infer/tests/diagnostic_snapshots.rs
expression: format_diagnostics(&diags)
---
error[E0013]: record fields do not match
  missing: y: Float
  extra:   name: String
  help: add `y: Float` and remove `name`
