crates/kea-infer/tests/snapshots/diagnostic_snapshots__e0014_effect_row_mismatch_pure_to_io_fail.snap
---
source: crates/kea-infer/tests/diagnostic_snapshots.rs
expression: format_diagnostics(&diags)
---
error[E0014]: function effects do not match
  declared: (pure — no effects)
  body also requires:
    Fail — may fail with a value
    IO — accesses the file system or console
  help: add Fail, IO to the effect signature or handle them in the body
